Scrollbar, socials - new, contacts - css fix

--- a/src/app/components/contacts/contacts.component.css
+++ b/src/app/components/contacts/contacts.component.css
@@ -24,7 +24,7 @@
 
 .line2 {
   background-color: var(--important);
-  width: calc(1420px - 32%);
+  width: calc(1420px - 30.3%);
   height: 1.5px;
 }
 
