--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -22,3 +22,17 @@
 #nav-links ul li a {
   text-decoration: none;
 }
+
+#socials {
+  position: fixed;
+  display: flex;
+  flex-flow: column;
+  height: 300px;
+  justify-content: space-between;
+  right: 2px;
+  bottom: 20px;
+}
+
+#socials img {
+  width: 30px;
+}
